ajustes de music backend

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DEBUG=true
 CORS_ORIGINS=*
 
-# Default provider for playlist creation
+# Default provider for playlist creation: spotify | itunes
 DEFAULT_PROVIDER=spotify
 
 # Spotify Client Credentials (catalog)
