refactoring music provider, added amazon music

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DEBUG=true
 CORS_ORIGINS=*
 
-# Default provider for playlist creation: spotify | itunes
+# Default provider for playlist creation: spotify | itunes | amazon_music
 DEFAULT_PROVIDER=spotify
 
 # Spotify Client Credentials (catalog)
@@ -11,3 +11,13 @@ SPOTIFY_MARKET=US
 
 # iTunes Search
 ITUNES_COUNTRY=US
+
+# Amazon Music Search / Audio Features
+AMAZON_MUSIC_API_BASE=https://api.music.amazon.dev/v1
+AMAZON_MUSIC_CLIENT_ID=
+AMAZON_MUSIC_CLIENT_SECRET=
+AMAZON_MUSIC_TOKEN_SCOPE=music:catalog
+AMAZON_MUSIC_TOKEN_URL=https://api.amazon.com/auth/o2/token
+AMAZON_MUSIC_COUNTRY=US
+AMAZON_MUSIC_AUTH_SCOPE = music::library:read
+AMAZON_MUSIC_AUTH_REDIRECT_URI = http://localhost:8000/auth/amazon
