--- a/docs/openapi/moodtune_music.yaml
+++ b/docs/openapi/moodtune_music.yaml
@@ -3,12 +3,12 @@ info:
   title: MoodTune Music API
   version: "1.0.0"
   description: |
-    API para encapsular integración con proveedores musicales (Spotify/iTunes).
+    API para encapsular integración con proveedores musicales (Spotify/iTunes/Amazon Music no oficial).
     Expone:
     - Creación de playlists (requiere token de usuario)
-    - Búsquedas por título+artista (Client Credentials / iTunes Search)
+    - Búsquedas por título+artista (Client Credentials / iTunes Search / Amazon Music)
     - Parámetros por emoción
-    - Resolución normalizada de canciones y audio-features
+    - Resolución normalizada de canciones y audio-features (incluye Amazon Music)
   termsOfService: https://moodtune.com/terms
   contact:
     name: Equipo 26 – MoodTune
@@ -23,6 +23,7 @@ tags:
   - name: Health
   - name: Playlists
   - name: Catalog
+  - name: Auth
 
 paths:
   /health:
@@ -153,7 +154,7 @@ paths:
   /catalog/audio-features:
     post:
       tags: [Catalog]
-      summary: Audio-features para lista de IDs
+      summary: Audio-features para lista de IDs (Spotify por defecto, acepta amazon_music)
       operationId: catalogAudioFeatures
       requestBody:
         required: true
@@ -165,6 +166,10 @@ paths:
                 ids:
                   type: array
                   items: { type: string }
+                provider:
+                  type: string
+                  enum: [spotify, amazon_music]
+                  description: Proveedor que entregará los audio-features; omitir para usar Spotify.
       responses:
         "200": { description: OK, content: { application/json: { schema: { $ref: "#/components/schemas/AudioFeaturesResponse" } } } }
         "400": { description: Error, content: { application/json: { schema: { $ref: "#/components/schemas/Error" } } } }
@@ -174,6 +179,36 @@ paths:
       tags: [Catalog]
       summary: Búsqueda simple de canciones en Spotify (Client Credentials)
       operationId: catalogSearchSpotify
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title: { type: string, example: "Fix You" }
+                artist: { type: string, example: "Coldplay" }
+                limit: { type: integer, example: 1 }
+              required: [title, artist]
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  items:
+                    type: array
+                    items: { type: object }
+                  returned: { type: integer }
+        "400": { description: Error, content: { application/json: { schema: { $ref: "#/components/schemas/Error" } } } }
+
+  /catalog/search-amazon:
+    post:
+      tags: [Catalog]
+      summary: BÁsqueda simple de canciones en Amazon Music (Client Credentials)
+      operationId: catalogSearchAmazon
       requestBody:
         required: true
         content:
@@ -229,6 +264,31 @@ paths:
                   returned: { type: integer }
         "400": { description: Error, content: { application/json: { schema: { $ref: "#/components/schemas/Error" } } } }
 
+  /auth/amazon:
+    get:
+      tags: [Auth]
+      summary: Construye la URL de autorización de Amazon Music para iniciar OAuth.
+      operationId: authAmazonGet
+      parameters:
+        - in: query
+          name: redirect_uri
+          schema: { type: string, example: "https://localhost:8020/auth/amazon/callback" }
+          required: false
+          description: URI de retorno que debe coincidir con la registrada en Amazon. Se puede definir como variable de entorno.
+        - in: query
+          name: scope
+          schema: { type: string, example: "music::library:read" }
+          description: Scopes solicitados; se usa `AMAZON_MUSIC_AUTH_SCOPE` si no se provee.
+      responses:
+        "200":
+          description: URL de autorización construida
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AuthorizationUrlResponse"
+        "400": { description: Redirect URI requerido, content: { application/json: { schema: { $ref: "#/components/schemas/Error" } } } }
+        "500": { description: Configuración incompleta, content: { application/json: { schema: { $ref: "#/components/schemas/Error" } } } }
+
 components:
   schemas:
     HealthResponse:
@@ -282,8 +342,8 @@ components:
       properties:
         id: { type: string, nullable: true }
         external_id: { type: string, nullable: true }
-        provider: { type: string, enum: [itunes, spotify] }
-        source: { type: string, example: spotify_search }
+        provider: { type: string, enum: [itunes, spotify, amazon_music] }
+        source: { type: string, example: amazon_music_search }
         title: { type: string }
         artist: { type: string }
         uri: { type: string, nullable: true }
@@ -315,3 +375,8 @@ components:
                 items: { $ref: "#/components/schemas/ResolveItem" }
         returned: { type: integer }
 
+    AuthorizationUrlResponse:
+      type: object
+      properties:
+        authorize_url: { type: string }
+      required: [authorize_url]
