--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ DEFAULT_PROVIDER=spotify
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 SPOTIFY_MARKET=US
+SPOTIFY_AUTH_REDIRECT_URI=http://127.0.0.1:8020/auth/spotify/callback
+SPOTIFY_AUTH_SCOPES=playlist-modify-public playlist-modify-private
+FRONTEND_CALLBACK_URL=http://localhost:8080/connect-spotify
 
 # iTunes Search
 ITUNES_COUNTRY=US
